@@ -3,6 +3,7 @@ ikiwiki (3.20121213) UNRELEASED; urgency=low
   * htmlscrubber: Allow the bitcoin URI scheme.
   * aggregate: When run with --aggregate, if an aggregation is already
     running, don't go on and --refresh.
+  * trail: Converted all dependencies to presence dependencies.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2012 16:15:24 -0400
 
